# cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp.code-workspace
conversor_temp/: CMakeLists.txt
cpp_basics/: CMakeLists.txt
cpp_basics/src/: add_numbersio.cpp  conversor.cpp  data_types.cpp  hola_mundo.cpp  num_complejo.cpp  rectangle.cpp  suma_decltype.cpp  suma_functional.cpp
cuadrado_std/: CMakeLists.txt  cuadrado_std.cpp
helloworld/: main
hola_mundo/: CMakeLists.txt  hola_mundo.cpp
num_complejo/: CMakeLists.txt
opencv_test/: CMakeLists.txt  cv_test.cpp
suma_vectores/: CMakeLists.txt  suma.cpp
